fix(ideas): section spacing and font size

--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -53,7 +53,7 @@
         justify-content: center;
         width: 6em;
         height: 6em;
-        background-color: c.$red-300;
+        background-color: c.$red-400;
         border-radius: 100%;
         svg {
           font-size: 3em;
